feat(make): updated make files

--- a/apple-sillicon/write/makefile
+++ b/apple-sillicon/write/makefile
@@ -1,7 +1,27 @@
-ENTRYPOINT = main
-FILE = write
+BIN = write
 
-main: $(FILE).o
-	ld -o $(FILE) ${FILE}.o -lSystem -syslibroot `xcrun -sdk macosx --show-sdk-path` -e $(ENTRYPOINT) -arch arm64
-main.o: $(FILE).s
-	as -o $(FILE).o $(FILE).s -g
+ENTRYPOINT = main
+ARCH = arm64
+LIB_SEARCH_PATH = System -syslibroot `xcrun -sdk macosx --show-sdk-path`
+
+ODIR = obj
+BDIR = bin
+SDIR = src
+
+BINPATH = $(BDIR)/$(BIN)
+
+SRCS = $(wildcard $(SDIR)/*.s)
+OBJS = $(patsubst $(SDIR)/%.s, $(ODIR)/%.o, $(SRCS))
+
+$(shell mkdir -p $(ODIR) $(BDIR))
+
+$(ODIR)/%.o: $(SDIR)/%.s
+	as -o $@ $< -g
+
+$(BINPATH): $(OBJS)
+	ld -o $(BINPATH) ${OBJS} -l$(LIB_SEARCH_PATH) -e $(ENTRYPOINT) -arch $(ARCH)
+
+.PHONY: clean
+
+clean:
+	rm -rf *~ $(ODIR) $(BDIR)
